# devc

./: .gitignore  README.md
.github/workflows/: release.yml
cli/: Cargo.toml  README.md
cli/.devcontainer/: Dockerfile  devcontainer.json
cli/src/: main.rs
cli/src/commands/: config.rs  generate.rs  list.rs  mod.rs  update.rs
cli/src/utils/: cache.rs  copier.rs  credentials.rs  fetcher.rs  field_order.rs  merger.rs  mod.rs  password.rs  tui.rs
docs/: index.html  install.sh
npm/: README.md  check-release.js  install.js  package.json  platform.js
pages/: index.html  install.sh
scripts/: build-local.sh  build-release.sh  bump-version.sh  release.sh
