[package]
name = "devc"
version = "0.1.2"
edition = "2021"
description = "CLI for generating devcontainers"
authors = ["SamitoX4"]
license = "MIT"
repository = "https://github.com/SamitoX4/devc"
homepage = "https://samitox4.github.io/devc"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
zip = "2.2"
indicatif = "0.17"
console = "0.15"
dirs = "6.0"
git2 = "0.19"
anyhow = "1.0"
thiserror = "2.0"
colored = "2.1"
walkdir = "2.5"
dialoguer = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
